# devvyn-meta-project

./: .gitignore  .markdownlint-cli2.yaml  .markdownlintrc  .pre-commit-config.yaml  .security-manifest.yaml  2025-09-27-if-i-talk-to-claude-chat-how-would-you-like-to-re.txt  2025-10-12-self-resonance-verification-protocol.txt  2025-11-01-fuck-i-just-lost-the-game-again.txt  2025-11-05-check-messages-before-acting-but-im-thinking-an.txt  AUTONOMOUS_EXPLORATION_FRAMEWORK.md  BRIDGE_SPEC_PROTOCOL.md  CLAUDE-CHAT.md  CLAUDE.md  CLAUDE_HANDOFF_PAYLOAD.md  COMMAND_STANDARDIZATION_PATTERNS.md  CONTEXT_INHERITANCE_GUIDE.md  CONTRIBUTING.md  COORDINATION_PROTOCOL.md  ClaudeCodeSystem.tla  FRAMEWORK.md  FRAMEWORK_V2.2_CAPABILITIES.md  IDEA_EVOLUTION_SYSTEM.md  IMPLEMENTATION-COMPLETE.md  INVARIANTS.md  JITS_IMPLEMENTATION_SUMMARY.md  MULTI_AGENT_INTEGRATION_REPORT.md  NAMING_CONVENTIONS.md  OPERATIONS_REFERENCE.md  PATTERNS.md  PLATFORM_NOMENCLATURE.md  PROJECT_ONBOARDING_TEMPLATE.md  QUICKSTART.md  README.md  RESOURCE_ACCESS_PROTOCOL.md  SECURITY_INCIDENT_RESPONSE.md  STORY_PROPAGATION_SYSTEM.md  SYSTEM_CONNECTION_MAP.md  WORKSPACE_BOUNDARIES.md  bridge-message-ludarium-naming.md  claude_code_system.cfg  (+13 more)
.claude/: OUTPUT-ROUTING.md  settings.local.json
.docs-builder/: README.md  convert.js  package-lock.json  package.json
.kb-context/: context.yaml
accessibility/: accessibility-notes.md
agents/: CHAT_AGENT_INSTRUCTIONS.md  CHAT_AGENT_INSTRUCTIONS_v1.1.md  CHAT_AGENT_REFERENCE.md  CHAT_CAPABILITIES.md  CHAT_SESSION_STARTUP.md  CODEX_AGENT_INSTRUCTIONS.md  GPT_AGENT_INSTRUCTIONS.md  HOPPER_AGENT_INSTRUCTIONS.md  HOPPER_REFERENCE.md  INVESTIGATOR_AGENT_INSTRUCTIONS.md  INVESTIGATOR_REFERENCE.md  ai-collaboration-framework.md  collaboration-playbook-quick-reference.md  collaboration-playbook-visual.html  collaboration-rules.md  human-agency-integration-framework.md  human-agent-strategic-collaboration.md  implementation-summary.md  inclusive-collaboration-design.md  project-context.md
archive/: README.md
bridge/: _message_template.md
commands/: registry.md
config/: audio-budget.json
devvyn_meta_project/: __init__.py
doc-templates/: default.html  (+4 more)
(+429 files in other folders)
